<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor"
    tools:context=".ui.view.ActivityMenu">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_marginLeft="25dp"
            android:fontFamily="casual"
            android:text="Menú de Opciones"
            android:textAlignment="center"
            android:textColor="#1E1D14"
            android:textSize="60sp"
            android:layout_marginBottom="25dp"/>



        <!--
            BUTTONS
        -->

        <Button
            android:id="@+id/btnInsertar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:backgroundTint="@null"
            android:background="@drawable/btncolor"
            android:text="@string/btn_insertar"
            android:textColor="#1E1D14"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnListaPeliculas"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:backgroundTint="@null"
            android:background="@drawable/btncolor"
            android:text="@string/btn_verPelicula"
            android:textColor="#1E1D14"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:backgroundTint="@null"
            android:background="@drawable/btncolor"
            android:text="@string/btn_eliminar"
            android:textColor="#1E1D14"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnActualizarPelicula"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:backgroundTint="@null"
            android:background="@drawable/btncolor"
            android:text="@string/btn_actualizar"
            android:textColor="#1E1D14"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnGPS"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btncolor"
            android:text="@string/btn_gps"
            android:textColor="#1E1D14"
            app:backgroundTint="@null" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        app:backgroundTint="@null"
        android:background="@drawable/btncolor"
        android:text="@string/btn_regresar"
        android:textColor="#1E1D14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>