<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor"
    tools:context=".ui.view.ActivityNewPelicula">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_marginLeft="30dp"
            android:fontFamily="casual"
            android:text="PELICULA"
            android:textAlignment="center"
            android:textColor="#1E1D14"
            android:textSize="49sp" />




        <EditText
            android:id="@+id/txTitulo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/txt_titulo"
            android:inputType="text"
            android:textColorHint="#1E1D14" />


        <EditText
            android:id="@+id/txImagen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="Imagen"
            android:inputType="textUri"
            android:textColorHint="#1E1D14"
            app:boxStrokeColor="#1E1D14" />



        <EditText
            android:id="@+id/txPresupuesto"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="Presupuesto"
            android:inputType="number"
            android:textColorHint="#1E1D14" />


        <EditText
            android:id="@+id/txPopuaridad"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="Popularidad"
            android:inputType="number"
            android:textColorHint="#1E1D14" />


        <EditText
            android:id="@+id/txLanz"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="fecha lanzamiento"
            android:inputType="date"
            android:textColorHint="#1E1D14"/>

        <EditText
            android:id="@+id/txgen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="generos"
            android:inputType="text"
            android:textColorHint="#1E1D14"/>

        <EditText
            android:id="@+id/txdur"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="duración de la pelicula"
            android:inputType="date"
            android:textColorHint="#1E1D14"/>

        <EditText
            android:id="@+id/txdes"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="descripción"
            android:inputType="text"
            android:textColorHint="#1E1D14"/>

        <!--
            BUTTONS
        -->

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guardar"
            app:backgroundTint="@null"
            android:background="@drawable/btncolor"
            android:textColor="#1E1D14"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/btncolor"
            android:text="@string/btn_regresar"
            android:textColor="#1E1D14"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>